// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product render_1 1`] = `
<div
  className="mb-2 card"
  id={1}
>
  <div
    className="row card-body"
  >
    <span
      className="amount col-3"
    >
      <span>
        Осталось
      </span>
      <span>
         1 
      </span>
    </span>
    <span
      className="product-name col-3"
    >
      Телефон
    </span>
    <span
      className="price col-3"
    >
      <span>
        по
      </span>
      <span>
         10 
      </span>
      <span>
        рублей
      </span>
    </span>
    <button
      className="col-3 btn btn-primary"
      disabled={false}
      onClick={null}
      type="button"
    >
      Добавить в корзину
    </button>
  </div>
</div>
`;

exports[`Product render_2 1`] = `
<div
  className="mb-2 card"
  id={5}
>
  <div
    className="row card-body"
  >
    <span
      className="amount col-3"
    >
      <span>
        Осталось
      </span>
      <span>
         73 
      </span>
    </span>
    <span
      className="product-name col-3"
    >
      text 2
    </span>
    <span
      className="price col-3"
    >
      <span>
        по
      </span>
      <span>
         123 
      </span>
      <span>
        рублей
      </span>
    </span>
    <button
      className="col-3 disabled btn btn-primary"
      disabled={true}
      onClick={null}
      type="button"
    >
      Добавить в корзину
    </button>
  </div>
</div>
`;
